# backend-devops-interview-fintual

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  NOTAS.md  README.md  docker-compose.yml  pyproject.toml  reporte-1.MD  reporte-2.MD  reporte-3.MD
.github/workflows/: ci.yml
blog/: api.py  exceptions.py  pagination.py  schemas.py  selectors.py  services.py
blog/management/commands/: seed.py
blog/migrations/: 0001_initial.py
blog/tests/: test_comments.py  test_posts.py  test_services.py
core/: settings.py  urls.py
